Reconcile azure-pipelines.yml with master

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,5 @@ jobs:
     - bash: |
         echo Commit SHA: $(Build.SourceVersion)
         git diff-tree --no-commit-id --name-only -r $(Build.SourceVersion) -m
-        echo test 1
+        echo a different message
       displayName: 'Show commit files'
