--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,27 +1,14 @@
 jobs:
-- job: CI
+- job:
   strategy:
-    maxParallel: 2
     matrix:
-      Linux:
-        vmImage: ubuntu-16.04
-      Windows:
-        vmImage: vs2017-win2016
-
+      windows:
+        vmImage: 'vs2017-win2016'
+      linux:
+        vmImage: 'ubuntu-16.04'
+      macos:
+        vmImage: 'macos-10.13'
+  pool:
+    vmImage: $(vmImage)
   steps:
-    - bash: |
-        echo "Commit SHA"
-        echo $(Build.SourceVersion)
-        
-        echo "git diff-tree"
-        git diff-tree --no-commit-id --name-only -r $(Build.SourceVersion) -m
-        
-        echo "git rev-list (minimal)"
-        git rev-list $(Build.SourceVersion) --parents --max-count=1
-        
-        echo "git rev-list (HEAD)"
-        git rev-list HEAD
-
-        echo "git log"
-        git log -n 5
-      displayName: 'Show commit files'
+  - script: echo Hello, world! $(vmImage)
