--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,11 @@ jobs:
 
     - task: NodeTool@0
       inputs:
+        versionSpec: 8.x
+    - template: steps.yml
+
+    - task: NodeTool@0
+      inputs:
         versionSpec: 8.12
     - template: steps.yml
     
