--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,11 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
+    - script: |
+        dir c:\ /a
+        dir d:\ /a
+        dir c:\tmp
+        dir d:\tmp
     - template: azure-pipelines-steps.yml
 
 - job: linux
