--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -10,10 +10,11 @@ steps:
     echo "JEST: ${JEST_DIR}"
     echo "TMP: ${TMP}"
     echo "TEMP: ${TEMP}"
-    echo "1a: $(node -p "const os=require('os');os.tmpdir();")"
-    echo "1b: $(node -p "const os=require('os');const path=require('path');path.resolve(os.tmpdir(), 'a-test');")"
-    echo "1c: $(node -p "process.env.TEMP")"    
-    echo "3: $(node -p "const os=require('os');const path=require('path');const workingDir = process.cwd(); path.resolve(workingDir, '..');")"
+    echo "os.tmpdir: $(node -p "const os=require('os');os.tmpdir();")"
+    echo "path.resolve os.tmpdir a-test: $(node -p "const os=require('os');const path=require('path');path.resolve(os.tmpdir(), 'a-test');")"
+    echo "process.env.TEMP: $(node -p "process.env.TEMP")"
+    echo "process.env: $(node -p "JSON.stringify(process.env, null, 2);")"
+    echo "cwd: $(node -p "const os=require('os');const path=require('path');const workingDir = process.cwd(); path.resolve(workingDir, '..');")"
     echo "hello"
   displayName: "Temp, current directory tests"
 
