--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ jobs:
   steps:
     - script: |
         choco install hg
-        echo '##vso[task.setvariable variable=PATH]%PATH%'
+        #echo '##vso[task.setvariable variable=PATH]%PATH%'
       displayName: 'Install Mercurial'
 
     - bash: |
