--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,16 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
-    - script: |
-        where hg
-        hg --version
-      displayName: 'Try gh'
+    - template: azure-pipelines-steps.yml
+
+- job: linux
+  pool:
+    vmImage: ubuntu-16.04
+  steps:
+    - template: azure-pipelines-steps.yml
+
+- job: macOS
+  pool:
+    vmImage: macos-10.13
+  steps:
+    - template: azure-pipelines-steps.yml
