Run some Git commands

--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,13 @@
 steps:
 - bash: |
-    printenv
+    git status
+    git remote -v
+    cp azure-pipelines.yml test.yml
+    git checkout -b t
+    git add .
+    git commit -m "Commit test.yml"
+    git push origin t
+- bash: |
+    curl $(System.TeamFoundationCollectionUri)/_apis/git/pullrequests -H "Authorization: Bearer ${SYSTEM_ACCESSTOKEN}"
+  env:
+    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
