--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,14 +5,14 @@ jobs:
   steps:
     - template: azure-pipelines-steps.yml
 
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
+#- job: linux
+#  pool:
+#    vmImage: ubuntu-16.04
+#  steps:
+#    - template: azure-pipelines-steps.yml
 
-- job: macOS
-  pool:
-    vmImage: macos-10.13
-  steps:
-    - template: azure-pipelines-steps.yml
+#- job: macOS
+#  pool:
+#    vmImage: macos-10.13
+#  steps:
+#    - template: azure-pipelines-steps.yml
