--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,10 @@
 steps:
+- bash: npm --version
 - bash: |
-    printenv
+    which npm
+    npm install -g npm
+    npm --version
+    which npm
+- bash: |
+    which npm
+    npm --version
