--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,7 @@ jobs:
     vmImage: macos-10.13
   steps:
     - script: brew info --json --installed
+    - script: |
+        sudo npm i -g npm
+        npm --version
     - template: azure-pipelines-steps.yml
