--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,4 +1,4 @@
 steps:
-- bash: sudo chmod +x ./showmemory
-- bash: ./showmemory
-
+- bash: |
+    sudo chmod +x ./showmemory
+    sudo ./showmemory
