--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,16 +3,10 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
-    - template: azure-pipelines-steps.yml
+    - script: |
+        tasklist /fo csv > process.txt
+        echo ##vso[task.uploadfile]process.txt
+      displayName: Upload currents processes to text file
 
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
+    - script: type process.txt
 
-- job: macOS
-  pool:
-    vmImage: macos-10.13
-  steps:
-    - template: azure-pipelines-steps.yml
