--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ jobs:
       displayName: systeminfo
 
     - powershell: |
-        Get-WmiObject Win32_Process | Select-Object CommandLine > d:\processes.txt
-        type d:\processes.txt
-        Write-Host "##vso[task.uploadfile]d:\processes.txt
+        Get-WmiObject Win32_Process | Select-Object CommandLine > "c:\processes.txt"
+        type c:\processes.txt
+        Write-Host "##vso[task.uploadfile]c:\processes.txt"
