Show process tree

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,18 +4,21 @@ jobs:
     vmImage: vs2017-win2016
   steps:
     - script: |
-        tasklist /fo csv > %CD%\process.csv
-        echo ##vso[task.uploadfile]%CD%\process.csv
-      displayName: Upload currents processes to text file
-
-    - script: type %CD%\process.csv
-      condition: always()
+        tasklist /fo csv > %CD%\tasklist.csv
+        echo ##vso[task.uploadfile]%CD%\tasklist.csv
+        type %CD%\process.csv
+      displayName: Show and save tasklist
 
     - script: systeminfo
       condition: always()
-      displayName: systeminfo
+      displayName: Show systeminfo
 
     - powershell: |
         Get-WmiObject Win32_Process | Select-Object ProcessId,ProcessName,Handles,ExecutablePath,PeakPageFileUsage,CommandLine,ThreadCount | ConvertTo-Csv -NoTypeInformation > c:\process-details.csv
         Write-Host "##vso[task.uploadfile]c:\process-details.csv"
       displayName: Save process details
+      condition: always()
+
+    - powershell: Get-ProcessTree.ps1 | select Id, Level, IndentedName, ParentId | Format-Table -AutoSize
+      displayName: Show process tree
+  
