--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,16 +3,11 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
-    - template: azure-pipelines-steps.yml
+    - powershell: |
+        Get-Service | Where-Object {$_.Status -eq "Running"}
+      displayName: Show running services
 
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
-
-- job: macOS
-  pool:
-    vmImage: macos-10.13
-  steps:
-    - template: azure-pipelines-steps.yml
+#    - script: |
+#        taskkill /f /im dotnet.exe
+#        taskkill /f /im powershell.exe
+    
