--- a/azure-pipelines-job.yml
+++ b/azure-pipelines-job.yml
@@ -13,6 +13,7 @@ jobs:
     pool:
       vmImage: $(VM_IMAGE)
     steps:
-    - script: echo Use Node $(NODE_VERSIONM)
+    - script: echo Use Node $(NODE_VERSION)
+      displayName: $(NODE_VERSION)
     - ${{ config.steps }}
     - script: echo Common post script
