--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,27 +1,28 @@
+variables:
+  matrix:
+    LinuxNode8:
+      NODE_VERSION: 8.x
+      VM_IMAGE: 'ubuntu-16.04'
+    LinuxNode10:
+      NODE_VERSION: 10.x
+      VM_IMAGE: 'ubuntu-16.04'
+    MacNode8:
+      NODE_VERSION: 8.x
+      VM_IMAGE: 'macOS-10.13'
+    MacNode10:
+      NODE_VERSION: 10.x
+      VM_IMAGE: 'macOS-10.13'
+    WindowsNode8:
+      NODE_VERSION: 8.x
+      VM_IMAGE: 'vs2017-win2016'
+    WindowsNode10:
+      NODE_VERSION: 10.x
+      VM_IMAGE: 'vs2017-win2016'
+
 jobs:
 - template: azure-pipelines-job.yml
   parameters:
-    
-    matrix:
-      LinuxNode8:
-        NODE_VERSION: 8.x
-        VM_IMAGE: 'ubuntu-16.04'
-      LinuxNode10:
-        NODE_VERSION: 10.x
-        VM_IMAGE: 'ubuntu-16.04'
-      MacNode8:
-        NODE_VERSION: 8.x
-        VM_IMAGE: 'macOS-10.13'
-      MacNode10:
-        NODE_VERSION: 10.x
-        VM_IMAGE: 'macOS-10.13'
-      WindowsNode8:
-        NODE_VERSION: 8.x
-        VM_IMAGE: 'vs2017-win2016'
-      WindowsNode10:
-        NODE_VERSION: 10.x
-        VM_IMAGE: 'vs2017-win2016'
-    
+
     configs:
     - job: simple
       steps:
