--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,35 +1,17 @@
-variables:
-  matrix:
-    LinuxNode8:
-      NODE_VERSION: 8.x
-      VM_IMAGE: 'ubuntu-16.04'
-
-      
-    LinuxNode10:
-      NODE_VERSION: 10.x
-      VM_IMAGE: 'ubuntu-16.04'
-    MacNode8:
-      NODE_VERSION: 8.x
-      VM_IMAGE: 'macOS-10.13'
-    MacNode10:
-      NODE_VERSION: 10.x
-      VM_IMAGE: 'macOS-10.13'
-    WindowsNode8:
-      NODE_VERSION: 8.x
-      VM_IMAGE: 'vs2017-win2016'
-    WindowsNode10:
-      NODE_VERSION: 10.x
-      VM_IMAGE: 'vs2017-win2016'
 
 jobs:
-- template: azure-pipelines-job.yml
-  parameters:
-
-    configs:
-    - job: simple
-      steps:
-      - bash: tasks/e2e-simple.sh
-
-    - job: KitchenSink
-      steps:
-      - bash: tasks/e2e-kitchensink.sh
+- job: linux
+  strategy:
+    matrix:
+      LinuxNode15:
+        NODE_VERSION: 15.x
+        VM_IMAGE: 'ubuntu-16.04'            
+      LinuxNode10:
+        NODE_VERSION: 10.x
+        VM_IMAGE: 'ubuntu-16.04'
+  steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: $(NODE_VERSION)
+    - script: |
+        echo $(NODE_VERSION)
