--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,20 @@
-jobs:
-- job: windows
-  pool:
-    vmImage: vs2017-win2016
-  steps:
-    - template: azure-pipelines-steps.yml
+variables:
+  version: '7.2'
+  server: 'sql1'
+  dbname: 'testdb'
+  uid: 'sa'
+  pass: 'Password456!'
 
+jobs:
 - job: linux
   pool:
     vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
-
-- job: macOS
-  pool:
-    vmImage: macos-10.13
-  steps:
-    - template: azure-pipelines-steps.yml
+  bash:
+  - script: |
+      docker pull mcr.microsoft.com/mssql/server:2017-latest
+      docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=Password456!' -p 1433:1433 -h $(server) --name=$(server) -d mcr.microsoft.com/mssql/server:2017-latest
+      docker ps -a
+      docker port $(server) 
+      which sqlcmd
+      sqlcmd -S localhost -U SA -P Password456! -Q 'select @@Version'
+  displayName: 'Run SQL Server for Linux'
