--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ jobs:
 - job: linux
   pool:
     vmImage: ubuntu-16.04
-  bash:
+  steps:
   - script: |
       docker pull mcr.microsoft.com/mssql/server:2017-latest
       docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=Password456!' -p 1433:1433 -h $(server) --name=$(server) -d mcr.microsoft.com/mssql/server:2017-latest
