--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
       docker pull mcr.microsoft.com/mssql/server:2017-latest
       docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=Password456!' -p 1433:1433 -h $(server) --name=$(server) -d mcr.microsoft.com/mssql/server:2017-latest
       docker ps -a
+      docker port $(server) 
       sqlcmd -S 0.0.0.0,1433 -U SA -P Password456! -Q 'select @@Version'
     displayName: 'Run SQL Server for Linux'
 
