--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,11 @@
 steps:
 - bash: |
-    printenv
+    export RUN_SCRIPT="$BUILD_SOURCESDIRECTORY/src/ci/init_repo.sh . $HOME/rustsrc && src/ci/docker/run.sh $IMAGE"
+    echo "##vso[task.setvariable variable=IMAGE]$IMAGE"
+    echo "##vso[task.setvariable variable=RUN_SCRIPT]$RUN_SCRIPT"
+  displayName: Prepare run script
+
+- bash: |
+    printenv | grep RUN_SCRIPT
+  displayName: Show variables
+
