--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -18,3 +18,14 @@ steps:
 - bash: |
     printenv | grep RUN_SCRIPT
   displayName: Show variables (2)
+
+- bash: |
+    set -x
+    export RUN_SCRIPT="$BUILD_SOURCESDIRECTORY/src/ci/init_repo.sh . $HOME/rustsrc && src/ci/run.sh && sccache --show-stats"
+    echo "$RUN_SCRIPT"
+    echo "##vso[task.setvariable variable=RUN_SCRIPT]$RUN_SCRIPT"
+  displayName: Prepare run script (3)
+
+- bash: |
+    printenv | grep RUN_SCRIPT
+  displayName: Show variables (3)
