Add Windows job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,13 @@ jobs:
       sqlcmd -S localhost,1433 -U SA -P Password456! -Q 'select @@Version'
     displayName: 'Run SQL Server for Linux'
 
-  - checkout: self
-    clean: true
-    fetchDepth: 1
+- job: windows
+  pool:
+    vmImage: vs2017-win2016
+  steps:
+  - script: |
+      docker pull mcr.microsoft.com/mssql/server:2017-latest
+      docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=Password456!' -p 1433:1433 -h $(server) --name=$(server) -d mcr.microsoft.com/mssql/server:2017-latest
+      docker ps -a
+      sqlcmd -S localhost,1433 -U SA -P Password456! -Q 'select @@Version'
+    displayName: 'Run SQL Server Linux on Windows'
