--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,9 @@ jobs:
     vmImage: vs2017-win2016
   steps:
   - script: |
+      echo ON
       where sqlcmd
-      cd C:\Program Files\Microsoft SQL Server\ 
+      c:
+      cd C:\Program Files\Microsoft SQL Server\
       dir *.exe /s
     displayName: 'Run SQL Server Linux on Windows'
