--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,8 @@
 steps:
-- bash: |
-    printenv
+- bash:
+    echo $MOCHA_EXTRA_OPTS
+    npm install
+    npm test
+  env:
+    MOCHA_EXTRA_OPTS: --reporter mocha-junit-reporter
+
