Use bad reporter

--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -6,5 +6,5 @@ steps:
     npm install mocha-junit-reporter
     npm test
   env:
-    MOCHA_EXTRA_OPTS: --reporter mocha-junit-reporter
+    MOCHA_EXTRA_OPTS: --reporter mocha-junit-reporter-FOO
 
