--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,17 @@
 steps:
-- bash: |
-    printenv
+- task: NodeTool@0
+  inputs:
+    versionSpec: 10.x
+  displayName: 'Install Node.js'
+
+- script: |
+    npm install -g create-react-app@2.1.8
+    create-react-app test-rc --typescript
+    yarn eject
+    yarn start
+
+- script: |
+    cd $(TEMP)
+    create-react-app test-rc2 --typescript
+    yarn eject
+    yarn start
