Switch to npm for eject

--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -4,16 +4,18 @@ steps:
     versionSpec: 10.x
   displayName: 'Install Node.js'
 
-- script: |
+- bash: |
     npm install -g create-react-app@2.1.8
     create-react-app test-rc --typescript
     cd test-rc
-    yarn eject
-    yarn start
+    npm run eject
+    yarn build
+    yarn test --watch=no
 
-- script: |
+- bash: |
     cd $(TEMP)
     create-react-app test-rc2 --typescript
     cd test-rc2
-    yarn eject
-    yarn start
+    npm run eject
+    yarn build
+    yarn test --watch=no
