--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
+
+variables:
+  CI: true
+  VSTS_OVERWRITE_TEMP: True
+  YARN_CACHE_FOLDER: $(Build.SourcesDirectory)/../yarn-cache
+  
 jobs:
 - job: windows
   pool:
