--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -8,8 +8,13 @@ steps:
     #echo $(yarn cache list)
     #ls -la ${y}/npm-opn-5.5.0-fc7164fab56d235904c51c3b27da6758ca3b9bfc/node_modules/opn
     
-    curl https://createreactapp.blob.core.windows.net/cache/yarn-cache-tar-gz | tar -xz -C ${y}/..
+    echo $(pwd)
+    cd ${y}/..
+    curl https://createreactapp.blob.core.windows.net/cache/yarn-cache-tar-gz | tar -xz
     
     echo $(yarn cache list)
     ls -la ${y}/npm-opn-5.5.0-fc7164fab56d235904c51c3b27da6758ca3b9bfc/node_modules/opn
   displayName: 'Seed yarn cache'
+
+- bash: |
+    echo $(pwd)
