--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -8,12 +8,18 @@ steps:
     #echo $(yarn cache list)
     #ls -la ${y}/npm-opn-5.5.0-fc7164fab56d235904c51c3b27da6758ca3b9bfc/node_modules/opn
     
-    echo $(pwd)
-    cd ${y}/..
-    curl https://createreactapp.blob.core.windows.net/cache/yarn-cache-tar-gz | tar -xz
+    #echo $(pwd)
+    #cd ${y}/..
+    #curl https://createreactapp.blob.core.windows.net/cache/yarn-cache-tar-gz | tar -xz
     
-    echo $(yarn cache list)
-    ls -la ${y}/npm-opn-5.5.0-fc7164fab56d235904c51c3b27da6758ca3b9bfc/node_modules/opn
+    #echo $(yarn cache list | wc --lines)
+    #ls -la ${y}/npm-opn-5.5.0-fc7164fab56d235904c51c3b27da6758ca3b9bfc/node_modules/opn
+    echo "Current NPM cache: $(npm config get cache --global)"      
+    export n="$(Build.SourcesDirectory)/../npm-cache"
+    mkdir -p $n      
+    npm config set cache "$n" --global
+    echo "New NPM cache: $(npm config get cache --global)"
+
   displayName: 'Seed yarn cache'
 
 - bash: |
