fix script; use yarn cache

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
 variables:
   CI: true
   VSTS_OVERWRITE_TEMP: True
+  YARN_CACHE_FOLDER: $(Build.SourcesDirectory)/../yarn-cache
 
 jobs:
 - job: windows
