--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,2 +1,11 @@
 steps:
+- bash: |
+    export y=$(yarn cache dir)
+    echo "Yarn cache: ${y}"
+    mkdir -p $y
+    cd ${y}/..
+    curl https://createreactapp.blob.core.windows.net/cache/yarn-cache-tar-gz | tar -xz
+    echo $(yarn cache list | wc --lines)
+  displayName: 'Seed yarn cache'
+
 - bash: ./run.sh
