--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,7 @@ variables:
   CI: true
   VSTS_OVERWRITE_TEMP: True
   YARN_CACHE_FOLDER: $(Build.SourcesDirectory)/../yarn-cache
+  NPM_CONFIG_CACHE: $(Build.SourcesDirectory)/../npm-cache
 
 jobs:
 - job: windows
